Add link to Project github page

--- a/projects/msc/index.html
+++ b/projects/msc/index.html
@@ -5,5 +5,6 @@
     </head>
     <body>
         Work in progress!
+        <a href="https://github.com/Tomate0613/mc-server-control">Project github page</a>
     </body>
 </html>
