--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Hello World!</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="resources/style/style.css">
+        <link rel="stylesheet" href="/resources/style/style.css">
         <script src="/resources/script/index.js" type="module"></script>
         <script src="/resources/script/excuses.js" type="module"></script>
         <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon.png">
