Improve image popups

--- a/index.html
+++ b/index.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Hello World!</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/resources/style/style.css">
-        <script src="/resources/script/index.js" type="module"></script>
-        <script src="/resources/script/excuses.js" type="module"></script>
-        <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-        <link rel="manifest" href="/site.webmanifest">
-        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#da532c">
-        <meta name="msapplication-TileColor" content="#da532c">
-        <meta name="theme-color" content="#ffffff">
-    </head>
-    <body>
-        <div id="container">
-            <div id="main">
-                <h1>Hello World!</h1>
-                <p>This is a simple web page.</p>
-                <div id="quote"></div>
-            </div>
-            <div id="msc" class="project" tabindex="0" data-folder="/projects/msc/screenshots" data-start="1" data-stop="3" href="/projects/msc/">
-                <img width="100%" class="image">
-            </div>
 
-            <div id="another-project" class="project" tabindex="0" data-folder="" data-start="1" data-stop="1" href="/projects/another-project/">
-                <img width="100%" class="image">
-            </div>
-        </div>
-    </body>
+<head>
+  <title>Hello World!</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="/resources/style/style.css">
+  <script src="/resources/script/index.js" type="module"></script>
+  <script src="/resources/script/excuses.js" type="module"></script>
+  <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#da532c">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+</head>
+
+<body>
+  <div id="container">
+    <div id="main">
+      <h1>Hello World!</h1>
+      <p>This is a simple web page.</p>
+      <div id="quote"></div>
+    </div>
+    <div id="msc" class="project" tabindex="0" data-folder="/projects/msc/screenshots" data-start="1" data-stop="3"
+      href="/projects/msc/">
+      <img width="100%" class="image">
+    </div>
+
+    <div id="another-project" class="project" tabindex="0" data-folder="" data-start="1" data-stop="1"
+      href="/projects/another-project/">
+      <img width="100%" class="image">
+    </div>
+  </div>
+</body>
+
 </html>
