Change project link to tomate launcher

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
       <p>This is a simple web page.</p>
       <div id="quote"></div>
     </div>
-    <div id="msc" class="project" tabindex="0" data-folder="/projects/msc/screenshots" data-start="1" data-stop="3"
+    <div id="msc" class="project project-left" tabindex="0" data-folder="/projects/msc/screenshots" data-start="1" data-stop="3"
       href="/projects/msc/">
       <img width="100%" class="image">
     </div>
 
-    <div id="another-project" class="project" tabindex="0" data-folder="" data-start="1" data-stop="1"
-      href="/projects/another-project/">
+    <div id="tomate-launcher" class="project project-right" tabindex="0" data-folder="" data-start="1" data-stop="1"
+      href="/projects/tomate-launcher/">
       <img width="100%" class="image">
     </div>
   </div>
