Add tomate launcher banner

--- a/projects/tomate-launcher/index.html
+++ b/projects/tomate-launcher/index.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Tomate Launcher</title>
+
+    <meta property="og:title" content="Tomate Launcher" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://tomate0613.github.io/projects/tomate-launcher" />
+    <meta property="og:image" content="images/banner.png" />
+    <meta property="og:description" content="A minecraft launcher" />
+
+    <meta name="theme-color" content="#FF0000">
+  </head>
   <body>
     <h1>Tomate Launcher</h1>
     <main>
