Use absolute path instead of relative path

--- a/projects/tomate-launcher/index.html
+++ b/projects/tomate-launcher/index.html
@@ -6,7 +6,7 @@
     <meta property="og:title" content="Tomate Launcher" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://tomate0613.github.io/projects/tomate-launcher" />
-    <meta property="og:image" content="images/banner.png" />
+    <meta property="og:image" content="https://tomate0613.github.io/projects/tomate-launcher/images/banner.png" />
     <meta property="og:description" content="A minecraft launcher" />
 
     <meta name="theme-color" content="#FF0000">
