Make banner larger

--- a/projects/tomate-launcher/index.html
+++ b/projects/tomate-launcher/index.html
@@ -9,6 +9,8 @@
     <meta property="og:image" content="https://tomate0613.github.io/projects/tomate-launcher/images/banner.png" />
     <meta property="og:description" content="A minecraft launcher" />
 
+    <meta name="twitter:card" content="summary_large_image">
+
     <meta name="theme-color" content="#FF0000">
   </head>
   <body>
