--- a/projects/tomate-launcher/index.html
+++ b/projects/tomate-launcher/index.html
@@ -4,12 +4,14 @@
     <title>Tomate Launcher</title>
 
     <meta property="og:title" content="Tomate Launcher" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://tomate0613.github.io/projects/tomate-launcher" />
-    <meta property="og:image" content="https://tomate0613.github.io/projects/tomate-launcher/images/banner.png" />
     <meta property="og:description" content="A minecraft launcher" />
 
+    <!-- <meta property="og:type" content="website" /> -->
+    <meta property="og:url" content="https://tomate0613.github.io/projects/tomate-launcher" />
+
     <meta name="twitter:card" content="summary_large_image">
+    <meta property="og:image" content="https://tomate0613.github.io/projects/tomate-launcher/images/banner.png" />
+
 
     <meta name="theme-color" content="#FF0000">
   </head>
