change og:type back to website again

--- a/projects/tomate-launcher/index.html
+++ b/projects/tomate-launcher/index.html
@@ -6,7 +6,7 @@
     <meta property="og:title" content="Tomate Launcher" />
     <meta property="og:description" content="A minecraft launcher" />
 
-    <meta property="og:type" content="article" />
+    <meta property="og:type" content="website" />
     <meta property="og:url" content="https://tomate0613.github.io/projects/tomate-launcher" />
 
     <meta name="twitter:card" content="summary_large_image">
