--- a/projects/tomate-launcher/index.html
+++ b/projects/tomate-launcher/index.html
@@ -4,21 +4,92 @@
     <title>Tomate Launcher</title>
 
     <meta property="og:title" content="Tomate Launcher" />
-    <meta property="og:description" content="A minecraft launcher" />
+    <meta
+      property="og:description"
+      content="Because you don't need a new Minecraft client"
+    />
 
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://tomate0613.github.io/projects/tomate-launcher" />
+    <meta
+      property="og:url"
+      content="https://tomate0613.github.io/projects/tomate-launcher"
+    />
 
-    <meta name="twitter:card" content="summary_large_image">
-    <meta property="og:image" content="https://tomate0613.github.io/projects/tomate-launcher/images/banner-lq.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      property="og:image"
+      content="https://tomate0613.github.io/projects/tomate-launcher/images/banner-lq.png"
+    />
 
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="/resources/icons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/resources/icons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/resources/icons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/resources/icons/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="/resources/icons/safari-pinned-tab.svg"
+      color="#da532c"
+    />
 
-    <meta name="theme-color" content="#FF0000">
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#da532c" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link rel="stylesheet" href="/resources/style/tomate-launcher.css" />
   </head>
   <body>
-    <h1>Tomate Launcher</h1>
+    <header>
+      <h1><a href="/" id="back">⬅</a>Tomate Launcher</h1>
+    </header>
     <main>
-      Tomate Launcher is currently in early development
+      <div id="hero-section">
+        <div id="hero-heading">Tomate Launcher</div>
+        <div id="hero-subheading">
+          Because you don't need a new Minecraft client
+        </div>
+        <div id="quick-links">
+          <a
+            class="btn-hollow"
+            href="https://github.com/Tomate0613/tomate-launcher/releases"
+            >Download</a
+          >
+          <a
+            class="btn-hollow"
+            href="https://github.com/Tomate0613/tomate-launcher"
+            >Github</a
+          >
+          <a
+            class="btn-hollow"
+            href="https://github.com/Tomate0613/tomate-launcher/wiki"
+            >Documentation</a
+          >
+        </div>
+      </div>
+      <div id="details">
+        Tomate Launcher is in closed development for now.
+
+        No screenshots just yet. So here are some images of cats instead.
+        <div id="images">
+          <img src="images/cat1.png" />
+          <img src="images/cat2.png" />
+          <img src="images/cat3.png" />
+        </div>
+      </div>
     </main>
   </body>
 </html>
