Replace images with compressed images

--- a/projects/msc/index.html
+++ b/projects/msc/index.html
@@ -23,7 +23,7 @@
       sizes="16x16"
       href="/resources/icons/favicon-16x16.png"
     />
-    <link rel="manifest" href="/resources/icons/site.webmanifest" />
+    <link rel="manifest" href="/site.webmanifest" />
     <link
       rel="mask-icon"
       href="/resources/icons/safari-pinned-tab.svg"
@@ -32,6 +32,8 @@
 
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#da532c" />
+
+    <script src="/resources/script/codecopy.js" defer></script>
   </head>
 
   <body>
@@ -44,22 +46,18 @@
       <div class="features">
         <div>
           Start and stop Minecraft servers
-          <br />
           <img src="images/1.png" width="500" tabindex="-1" />
         </div>
         <div>
           Access to Minecraft server console
-          <br />
           <img src="images/2.png" width="500" tabindex="-1" />
         </div>
         <div>
           Manage Minecraft server plugins/mods
-          <br />
           <img src="images/3.png" width="500" tabindex="-1" />
         </div>
         <div>
           Manage Minecraft server configuration
-          <br />
           <img src="images/4.png" width="500" tabindex="-1" />
         </div>
       </div>
