--- a/projects/tomate-launcher/index.html
+++ b/projects/tomate-launcher/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Tomate Launcher</title>
 
@@ -18,8 +18,10 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       property="og:image"
-      content="https://tomate0613.github.io/projects/tomate-launcher/images/banner-lq.png"
+      content="https://tomate0613.github.io/projects/tomate-launcher/images/banner.webp"
     />
+
+    <meta name="description" content="The official website for Tomate Launcher" />
 
     <link
       rel="apple-touch-icon"
@@ -38,7 +40,7 @@
       sizes="16x16"
       href="/resources/icons/favicon-16x16.png"
     />
-    <link rel="manifest" href="/resources/icons/site.webmanifest" />
+    <link rel="manifest" href="/site.webmanifest" />
     <link
       rel="mask-icon"
       href="/resources/icons/safari-pinned-tab.svg"
@@ -85,9 +87,9 @@
 
         No screenshots just yet. So here are some images of cats instead.
         <div id="images">
-          <img src="images/cat1.png" />
-          <img src="images/cat2.png" />
-          <img src="images/cat3.png" />
+          <img src="images/cat1.webp" alt="AI drawing of a cat in a minecraft world" />
+          <img src="images/cat2.webp" alt="AI drawing of a cat in a minecraft world" />
+          <img src="images/cat3.webp" alt="AI drawing of a cat in a minecraft world" />
         </div>
       </div>
     </main>
