--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       sizes="16x16"
       href="/resources/icons/favicon-16x16.png"
     />
-    <link rel="manifest" href="/resources/icons/site.webmanifest" />
+    <link rel="manifest" href="/site.webmanifest" />
     <link
       rel="mask-icon"
       href="/resources/icons/safari-pinned-tab.svg"
