Update tomate-launcher page

--- a/projects/tomate-launcher/index.html
+++ b/projects/tomate-launcher/index.html
@@ -1,97 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Tomate Launcher</title>
 
-    <meta property="og:title" content="Tomate Launcher" />
-    <meta
-      property="og:description"
-      content="Because you don't need a new Minecraft client"
-    />
+<head>
+  <title>Tomate Launcher</title>
 
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:url"
-      content="https://tomate0613.github.io/projects/tomate-launcher"
-    />
+  <meta property="og:title" content="Tomate Launcher" />
+  <meta property="og:description" content="Because you don't need a new Minecraft client" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      property="og:image"
-      content="https://tomate0613.github.io/projects/tomate-launcher/images/banner.webp"
-    />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://tomate0613.github.io/projects/tomate-launcher" />
 
-    <meta name="description" content="The official website for Tomate Launcher" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta property="og:image" content="https://tomate0613.github.io/projects/tomate-launcher/images/banner.webp" />
 
-    <link
-      rel="apple-touch-icon"
-      sizes="76x76"
-      href="/resources/icons/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="/resources/icons/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="/resources/icons/favicon-16x16.png"
-    />
-    <link rel="manifest" href="/site.webmanifest" />
-    <link
-      rel="mask-icon"
-      href="/resources/icons/safari-pinned-tab.svg"
-      color="#da532c"
-    />
+  <meta name="description" content="The official website for Tomate Launcher" />
 
-    <meta name="msapplication-TileColor" content="#da532c" />
-    <meta name="theme-color" content="#da532c" />
+  <link rel="apple-touch-icon" sizes="76x76" href="/resources/icons/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/resources/icons/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/resources/icons/favicon-16x16.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+  <link rel="mask-icon" href="/resources/icons/safari-pinned-tab.svg" color="#da532c" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="msapplication-TileColor" content="#da532c" />
+  <meta name="theme-color" content="#da532c" />
 
-    <link rel="stylesheet" href="/resources/style/tomate-launcher.css" />
-  </head>
-  <body>
-    <header>
-      <h1><a href="/" id="back">⬅</a>Tomate Launcher</h1>
-    </header>
-    <main>
-      <div id="hero-section">
-        <div id="hero-heading">Tomate Launcher</div>
-        <div id="hero-subheading">
-          Because you don't need a new Minecraft client
-        </div>
-        <div id="quick-links">
-          <a
-            class="btn-hollow"
-            href="https://github.com/Tomate0613/tomate-launcher/releases"
-            >Download</a
-          >
-          <a
-            class="btn-hollow"
-            href="https://github.com/Tomate0613/tomate-launcher"
-            >Github</a
-          >
-          <a
-            class="btn-hollow"
-            href="https://github.com/Tomate0613/tomate-launcher/wiki"
-            >Documentation</a
-          >
-        </div>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <link rel="stylesheet" href="/resources/style/tomate-launcher.css" />
+</head>
+
+<body>
+  <header>
+    <h1><a href="/" id="back">⬅</a>Tomate Launcher</h1>
+  </header>
+  <main>
+    <div id="hero-section">
+      <div id="hero-heading">Tomate Launcher</div>
+      <div id="hero-subheading">
+        Because you don't need a new Minecraft client
       </div>
-      <div id="details">
-        Tomate Launcher is in closed development for now.
-
-        No screenshots just yet. So here are some images of cats instead.
+      <div id="quick-links">
+        <a class="btn-hollow" href="https://github.com/Tomate0613/tomate-launcher/releases">Download</a>
+        <a class="btn-hollow" href="https://github.com/Tomate0613/tomate-launcher">Github</a>
+        <a class="btn-hollow" href="https://github.com/Tomate0613/tomate-launcher/wiki">Documentation</a>
+      </div>
+    </div>
+    <div id="details">
+      <section>
+        <h1>Preview</h1>
+        <div class="preview">
+          <iframe src="pages/modpacks.html"></iframe>
+          <div class="preview-description">This is what the main UI currently looks like</div>
+        </div>
+      </section>
+      <section>
+        <h1>Development</h1>
+        Tomate Launcher is in closed development for now. But it will be open source once it releases.
+        I wont tell you too much more about tomate-launcher for now.
+        So here are some images of cats for you.
         <div id="images">
           <img src="images/cat1.webp" alt="AI drawing of a cat in a minecraft world" />
           <img src="images/cat2.webp" alt="AI drawing of a cat in a minecraft world" />
           <img src="images/cat3.webp" alt="AI drawing of a cat in a minecraft world" />
         </div>
-      </div>
-    </main>
-  </body>
+      </section>
+    </div>
+  </main>
+</body>
+
 </html>
