--- a/projects/tomate-launcher/index.html
+++ b/projects/tomate-launcher/index.html
@@ -5,15 +5,17 @@
   <title>Tomate Launcher</title>
 
   <meta property="og:title" content="Tomate Launcher" />
-  <meta property="og:description" content="Because you don't need a new Minecraft client" />
+
+  <meta name="description"
+    content="Tomate Launcher is a Minecraft launcher designed to make playing modded Minecraft easier then ever before">
+  <meta property="og:description"
+    content="Tomate Launcher is a Minecraft launcher designed to make playing modded Minecraft easier then ever before" />
 
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://tomate0613.github.io/projects/tomate-launcher" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta property="og:image" content="https://tomate0613.github.io/projects/tomate-launcher/images/banner.webp" />
-
-  <meta name="description" content="The official website for Tomate Launcher" />
 
   <link rel="apple-touch-icon" sizes="76x76" href="/resources/icons/apple-touch-icon.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="/resources/icons/favicon-32x32.png" />
