google site verification

--- a/projects/tomate-launcher/index.html
+++ b/projects/tomate-launcher/index.html
@@ -16,6 +16,7 @@
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta property="og:image" content="https://tomate0613.github.io/projects/tomate-launcher/images/banner.webp" />
+  <meta name="google-site-verification" content="Pf5dyk4f7lM-H5JMPc77WTTYj1jVIGOAISkUG49rBiA" />
 
   <link rel="apple-touch-icon" sizes="76x76" href="/resources/icons/apple-touch-icon.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="/resources/icons/favicon-32x32.png" />
