Fix typo and update preview

--- a/projects/tomate-launcher/index.html
+++ b/projects/tomate-launcher/index.html
@@ -7,9 +7,9 @@
   <meta property="og:title" content="Tomate Launcher" />
 
   <meta name="description"
-    content="Tomate Launcher is a Minecraft launcher designed to make playing modded Minecraft easier then ever before">
+    content="Tomate Launcher is a Minecraft launcher designed to make playing modded Minecraft easier than ever before">
   <meta property="og:description"
-    content="Tomate Launcher is a Minecraft launcher designed to make playing modded Minecraft easier then ever before" />
+    content="Tomate Launcher is a Minecraft launcher designed to make playing modded Minecraft easier than ever before" />
 
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://tomate0613.github.io/projects/tomate-launcher" />
@@ -52,7 +52,7 @@
       <section>
         <h1>Preview</h1>
         <div class="preview">
-          <iframe src="pages/modpacks.html"></iframe>
+          <iframe src="pages/modpacks.html" title="Modpack page"></iframe>
           <div class="preview-description">This is what the main UI currently looks like</div>
         </div>
       </section>
