--- a/projects/tomate-launcher/index.html
+++ b/projects/tomate-launcher/index.html
@@ -60,7 +60,7 @@
         <h1>Development</h1>
         Tomate Launcher is in closed development for now. But it will be open source once it releases.
         I wont tell you too much more about tomate-launcher for now.
-        So here are some images of cats for you.
+        So here are some images of cats for you instead.
         <div id="images">
           <img src="images/cat1.webp" alt="AI drawing of a cat in a minecraft world" />
           <img src="images/cat2.webp" alt="AI drawing of a cat in a minecraft world" />
