Add back link to cmd

--- a/cmd/index.html
+++ b/cmd/index.html
@@ -27,7 +27,11 @@
   </div>
 
   <main id="console">
-    <h1>Tomate0613</h1>
+    <h1>
+      <a id="back" href="../">
+        Tomate0613
+      </a>
+    </h1>
 
     <div>
       > instructions
